<resources>
    <string name="app_name">Prayer Times</string>
    <string name="location">Location</string>
    <string name="locationD">%s. Tap to update</string>
    <string name="Notifications">Notifications</string>
    <string name="NotificationsD">Change notification settings</string>
    <string name="SilentMode">Silent Mode</string>
    <string name="SilentModeD">Silence your phone for prayer</string>
    <string name="CalculationMethod">Calculation Method</string>
    <string name="CalculationMethodD">Change how prayer time is calculated</string>
    <string name="Language">Language</string>
    <string name="LanguageD">Choose the application\'s language</string>
    <string name="Clock">Clock</string>
    <string name="ClockD">am or pm</string>
    <string name="Theme">Theme</string>
    <string name="ThemeD">Change how the app looks</string>
    <string name="SilentModeStartDelay">Run Silent Mode After Athan by</string>
    <string name="SilentModeStartLength">Run Silent Mode for x min</string>
    <string name="NotificationsEnable">Enable or Disable Notifications</string>
    <string name="NotificationsFajrBefore">Alert Before Fajr Athan By</string>
    <string name="NotificationsFajrAfter">Alert After Fajr Athan By</string>
    <string name="NotificationsDhohrBefore">Alert Before Dhohr Athan By</string>
    <string name="NotificationsDhohrAfter">Alert After Dhohr Athan By</string>
    <string name="NotificationsAsrBefore">Alert Before Asr Athan By</string>
    <string name="NotificationsAsrAfter">Alert After Asr Athan By</string>
    <string name="NotificationsMaghrebBefore">Alert Before Maghreb Athan By</string>
    <string name="NotificationsMaghrebAfter">Alert After Maghreb Athan By</string>
    <string name="NotificationsIshaBefore">Alert Before Isha Athan By</string>
    <string name="NotificationsIshaAfter">Alert After Isha Athan By</string>
    <string name="Ithna_Ashari">Ithna Ashari</string>
    <string name="UIS">University of Islamic Sciences, Karachi</string>
    <string name="ISNA">Islamic Society of North America (ISNA)</string>
    <string name="MWL">Muslim World League (MWL)</string>
    <string name="Umm_al_Qura">Umm al-Qura, Makkah</string>
    <string name="EGAS">Egyptian General Authority of Survey</string>
    <string name="IGUT">Institute of Geophysics, University of Tehran</string>
    <string name="Asr_Adjustment">Asr Adjustment</string>
    <string name="Shafii">Shafii</string>
    <string name="Hanafi">Hanafi</string>
    <string name="higher_latitudes_adjustment">Higher Latitudes Adjustment</string>
    <string name="No_adjustment">No adjustment</string>
    <string name="middle_of_night">Middle of Night</string>
    <string name="seventh_of_night">1/7th of Night</string>
    <string name="angle_60th_of_night">Angle 60th of Night</string>
    <string name="settings">Settings</string>
    <string name="About">About</string>
    <string name="aboutUs">Developed By : Abdulrahman Alsarrani Obadah Arabi Salman Alsubki Abdullah Alshalan</string>
    <string name="background_image" translatable="false">backgroundImage</string>
    <string name="fajr">Fajr</string>
    <string name="dhohr">Dhohr</string>
    <string name="asr">Asr</string>
    <string name="maghreb">Maghreb</string>
    <string name="isha">Isha</string>
    <string name="timeRemaining">%s Prayer\n\nAfter %d hour %d minutes</string>
    <string name="channel_prayer_name">Prayer</string>
    <string name="channel_prayer_description">prayers</string>
    <string name="beforeAthan">Not much time left for athan</string>
    <string name="athan">It is time for athan</string>
    <string name="iqama">It is time for iqama</string>

</resources>
