<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.SilentModeActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/mainToolBar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:popupTheme="@style/ThemeOverlay.AppCompat" />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="8dp"
        app:cardCornerRadius="8dp"
        app:contentPadding="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mainToolBar">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/linearLayoutSilentMode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical">

                <Switch
                    android:id="@+id/switchSilentMode"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/SilentMode" />

                <TextView
                    android:id="@+id/textViewSilentModeD"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:text="@string/SilentModeD"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1" />
            </LinearLayout>

            <View
                android:id="@+id/divider0"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="4dp"
                android:background="?android:attr/listDivider" />


            <EditText
                android:id="@+id/editTextNumberDelay"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/SilentModeStartDelay"
                android:importantForAutofill="no"
                android:inputType="number"
                android:selectAllOnFocus="true"
                android:singleLine="true"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

            <View
                android:id="@+id/divider1"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="4dp"
                android:background="?android:attr/listDivider" />

            <EditText
                android:id="@+id/editTextNumberLength"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/SilentModeStartLength"
                android:importantForAutofill="no"
                android:inputType="number"
                android:selectAllOnFocus="true"
                android:singleLine="true"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

        </LinearLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>